FIX: bottom blank space on tablet devices

--- a/src/components/Player/styles.module.scss
+++ b/src/components/Player/styles.module.scss
@@ -154,7 +154,7 @@
 }
 
 //smaller tablet
-@media (max-width: 950px) {
+@media (max-width: 950px), (min-height: 1000px) {
   .playerContainer,
   .emptyPlayer {
     width: 100%;
